--- a/exercise/ZerodhaPortfolioAnalysis.ipynb
+++ b/exercise/ZerodhaPortfolioAnalysis.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Cannot change to a different GUI toolkit: notebook. Using widget instead.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pandas_datareader import data as pd_read\n",
     "import functools \n",
+    "%matplotlib notebook \n",
     "\n",
     "SYM = \"Symbol\"\n",
     "QTY = \"Qty Available\"\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,180 +107,180 @@
        "      <td>BHEL.NS</td>\n",
        "      <td>8</td>\n",
        "      <td>0.084211</td>\n",
-       "      <td>-0.001912</td>\n",
-       "      <td>0.039817</td>\n",
-       "      <td>0.039817</td>\n",
+       "      <td>-0.002060</td>\n",
+       "      <td>0.034288</td>\n",
+       "      <td>0.034288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>HUDCO.NS</td>\n",
        "      <td>4</td>\n",
        "      <td>0.042105</td>\n",
-       "      <td>-0.000708</td>\n",
-       "      <td>0.033307</td>\n",
-       "      <td>0.033307</td>\n",
+       "      <td>-0.000659</td>\n",
+       "      <td>0.029429</td>\n",
+       "      <td>0.029429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>LUPIN.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>0.001089</td>\n",
-       "      <td>0.026045</td>\n",
-       "      <td>0.026045</td>\n",
+       "      <td>0.000302</td>\n",
+       "      <td>0.021216</td>\n",
+       "      <td>0.021216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>DABUR.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>0.000541</td>\n",
-       "      <td>0.021097</td>\n",
-       "      <td>0.021097</td>\n",
+       "      <td>0.000441</td>\n",
+       "      <td>0.017171</td>\n",
+       "      <td>0.017171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>BIOCON.NS</td>\n",
        "      <td>4</td>\n",
        "      <td>0.042105</td>\n",
-       "      <td>0.001531</td>\n",
-       "      <td>0.025685</td>\n",
-       "      <td>0.025685</td>\n",
+       "      <td>0.000565</td>\n",
+       "      <td>0.022385</td>\n",
+       "      <td>0.022385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>NLCINDIA.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.000713</td>\n",
-       "      <td>0.027458</td>\n",
-       "      <td>0.027458</td>\n",
+       "      <td>-0.000753</td>\n",
+       "      <td>0.024360</td>\n",
+       "      <td>0.024360</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>LICHSGFIN.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.001804</td>\n",
-       "      <td>0.040060</td>\n",
-       "      <td>0.040060</td>\n",
+       "      <td>-0.001093</td>\n",
+       "      <td>0.031350</td>\n",
+       "      <td>0.031350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>ITC.NS</td>\n",
        "      <td>4</td>\n",
        "      <td>0.042105</td>\n",
-       "      <td>-0.001693</td>\n",
-       "      <td>0.026963</td>\n",
-       "      <td>0.026963</td>\n",
+       "      <td>-0.001160</td>\n",
+       "      <td>0.020608</td>\n",
+       "      <td>0.020608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>UPL.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.001498</td>\n",
-       "      <td>0.035066</td>\n",
-       "      <td>0.035066</td>\n",
+       "      <td>-0.000331</td>\n",
+       "      <td>0.027495</td>\n",
+       "      <td>0.027495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>ICICIBANK.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.001387</td>\n",
-       "      <td>0.036095</td>\n",
-       "      <td>0.036095</td>\n",
+       "      <td>0.000238</td>\n",
+       "      <td>0.027692</td>\n",
+       "      <td>0.027692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>HINDPETRO.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.002059</td>\n",
-       "      <td>0.032336</td>\n",
-       "      <td>0.032336</td>\n",
+       "      <td>-0.000866</td>\n",
+       "      <td>0.028618</td>\n",
+       "      <td>0.028618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>ASHOKLEY.NS</td>\n",
        "      <td>15</td>\n",
        "      <td>0.157895</td>\n",
-       "      <td>-0.000147</td>\n",
-       "      <td>0.045923</td>\n",
-       "      <td>0.045923</td>\n",
+       "      <td>-0.000594</td>\n",
+       "      <td>0.036736</td>\n",
+       "      <td>0.036736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>AXISBANK.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.002045</td>\n",
-       "      <td>0.043922</td>\n",
-       "      <td>0.043922</td>\n",
+       "      <td>-0.000539</td>\n",
+       "      <td>0.032143</td>\n",
+       "      <td>0.032143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>IOC.NS</td>\n",
        "      <td>4</td>\n",
        "      <td>0.042105</td>\n",
-       "      <td>-0.002343</td>\n",
-       "      <td>0.023705</td>\n",
-       "      <td>0.023705</td>\n",
+       "      <td>-0.001271</td>\n",
+       "      <td>0.022107</td>\n",
+       "      <td>0.022107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>CRISIL.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.000059</td>\n",
-       "      <td>0.025952</td>\n",
-       "      <td>0.025952</td>\n",
+       "      <td>0.000387</td>\n",
+       "      <td>0.022374</td>\n",
+       "      <td>0.022374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>TATAMOTORS.NS</td>\n",
        "      <td>4</td>\n",
        "      <td>0.042105</td>\n",
-       "      <td>-0.001577</td>\n",
-       "      <td>0.040285</td>\n",
-       "      <td>0.040285</td>\n",
+       "      <td>-0.000584</td>\n",
+       "      <td>0.039437</td>\n",
+       "      <td>0.039437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>COCHINSHIP.NS</td>\n",
        "      <td>2</td>\n",
        "      <td>0.021053</td>\n",
-       "      <td>-0.000641</td>\n",
-       "      <td>0.034928</td>\n",
-       "      <td>0.034928</td>\n",
+       "      <td>-0.000118</td>\n",
+       "      <td>0.025796</td>\n",
+       "      <td>0.025796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>SBIN.NS</td>\n",
        "      <td>11</td>\n",
        "      <td>0.115789</td>\n",
-       "      <td>-0.002602</td>\n",
-       "      <td>0.031740</td>\n",
-       "      <td>0.031740</td>\n",
+       "      <td>-0.000943</td>\n",
+       "      <td>0.026779</td>\n",
+       "      <td>0.026779</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>BEL.NS</td>\n",
        "      <td>1</td>\n",
        "      <td>0.010526</td>\n",
-       "      <td>-0.000527</td>\n",
-       "      <td>0.035682</td>\n",
-       "      <td>0.035682</td>\n",
+       "      <td>0.000063</td>\n",
+       "      <td>0.029769</td>\n",
+       "      <td>0.029769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>SETFNN50.NS</td>\n",
        "      <td>10</td>\n",
        "      <td>0.105263</td>\n",
-       "      <td>-0.000431</td>\n",
-       "      <td>0.018456</td>\n",
-       "      <td>0.018456</td>\n",
+       "      <td>0.000706</td>\n",
+       "      <td>0.020210</td>\n",
+       "      <td>0.020210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -288,30 +297,30 @@
       ],
       "text/plain": [
        "           Symbol  Qty Available    Weight      Mean       Std  Variance\n",
-       "0         BHEL.NS              8  0.084211 -0.001912  0.039817  0.039817\n",
-       "1        HUDCO.NS              4  0.042105 -0.000708  0.033307  0.033307\n",
-       "2        LUPIN.NS              1  0.010526  0.001089  0.026045  0.026045\n",
-       "3        DABUR.NS              1  0.010526  0.000541  0.021097  0.021097\n",
-       "4       BIOCON.NS              4  0.042105  0.001531  0.025685  0.025685\n",
-       "5     NLCINDIA.NS              1  0.010526 -0.000713  0.027458  0.027458\n",
-       "6    LICHSGFIN.NS              1  0.010526 -0.001804  0.040060  0.040060\n",
-       "7          ITC.NS              4  0.042105 -0.001693  0.026963  0.026963\n",
-       "8          UPL.NS              1  0.010526 -0.001498  0.035066  0.035066\n",
-       "9    ICICIBANK.NS              1  0.010526 -0.001387  0.036095  0.036095\n",
-       "10   HINDPETRO.NS              1  0.010526 -0.002059  0.032336  0.032336\n",
-       "11    ASHOKLEY.NS             15  0.157895 -0.000147  0.045923  0.045923\n",
-       "12    AXISBANK.NS              1  0.010526 -0.002045  0.043922  0.043922\n",
-       "13         IOC.NS              4  0.042105 -0.002343  0.023705  0.023705\n",
-       "14      CRISIL.NS              1  0.010526 -0.000059  0.025952  0.025952\n",
-       "15  TATAMOTORS.NS              4  0.042105 -0.001577  0.040285  0.040285\n",
-       "16  COCHINSHIP.NS              2  0.021053 -0.000641  0.034928  0.034928\n",
-       "17        SBIN.NS             11  0.115789 -0.002602  0.031740  0.031740\n",
-       "18         BEL.NS              1  0.010526 -0.000527  0.035682  0.035682\n",
-       "19    SETFNN50.NS             10  0.105263 -0.000431  0.018456  0.018456\n",
+       "0         BHEL.NS              8  0.084211 -0.002060  0.034288  0.034288\n",
+       "1        HUDCO.NS              4  0.042105 -0.000659  0.029429  0.029429\n",
+       "2        LUPIN.NS              1  0.010526  0.000302  0.021216  0.021216\n",
+       "3        DABUR.NS              1  0.010526  0.000441  0.017171  0.017171\n",
+       "4       BIOCON.NS              4  0.042105  0.000565  0.022385  0.022385\n",
+       "5     NLCINDIA.NS              1  0.010526 -0.000753  0.024360  0.024360\n",
+       "6    LICHSGFIN.NS              1  0.010526 -0.001093  0.031350  0.031350\n",
+       "7          ITC.NS              4  0.042105 -0.001160  0.020608  0.020608\n",
+       "8          UPL.NS              1  0.010526 -0.000331  0.027495  0.027495\n",
+       "9    ICICIBANK.NS              1  0.010526  0.000238  0.027692  0.027692\n",
+       "10   HINDPETRO.NS              1  0.010526 -0.000866  0.028618  0.028618\n",
+       "11    ASHOKLEY.NS             15  0.157895 -0.000594  0.036736  0.036736\n",
+       "12    AXISBANK.NS              1  0.010526 -0.000539  0.032143  0.032143\n",
+       "13         IOC.NS              4  0.042105 -0.001271  0.022107  0.022107\n",
+       "14      CRISIL.NS              1  0.010526  0.000387  0.022374  0.022374\n",
+       "15  TATAMOTORS.NS              4  0.042105 -0.000584  0.039437  0.039437\n",
+       "16  COCHINSHIP.NS              2  0.021053 -0.000118  0.025796  0.025796\n",
+       "17        SBIN.NS             11  0.115789 -0.000943  0.026779  0.026779\n",
+       "18         BEL.NS              1  0.010526  0.000063  0.029769  0.029769\n",
+       "19    SETFNN50.NS             10  0.105263  0.000706  0.020210  0.020210\n",
        "20     SBICARD.NS             19  0.200000  0.000999  0.033308  0.033308"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +329,7 @@
     "# add mean std var for each stock to portfolio\n",
     "stock_data = pd.DataFrame()\n",
     "for stock in portfolio[SYM]:\n",
-    "    stock_data[stock]= pd_read.DataReader(stock, data_source='yahoo', start='2020-1-1')['Close']\n",
+    "    stock_data[stock]= pd_read.DataReader(stock, data_source='yahoo', start='2019-1-1')['Close']\n",
     "stock_returns = np.log(stock_data/stock_data.shift(1))\n",
     "portfolio = portfolio.merge(pd.DataFrame().join([stock_returns.mean().to_frame(MEAN),stock_returns.std().to_frame(STD),stock_returns.std().to_frame(VARI)],how = 'outer'),left_index = False, right_index = True, how = 'left', left_on = SYM) \n",
     "portfolio"
@@ -328,7 +337,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13c3456da46246abb4a647235e5a350c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<AxesSubplot:xlabel='Date'>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# normalization graph trend for portfloi stocks\n",
+    "(stock_data/stock_data.iloc[0]*100).plot(figsize=(15,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,16 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0005535400150538315"
+       "0.0004243927031783092"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,16 +404,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.023527431118884005"
+       "0.02060079375117156"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.003153256285841866"
+       "-0.002927885639706255"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,16 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.06353870807996014"
+       "-0.02583076819815623"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,22 +469,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Symbol            BIOCON.NS\n",
-       "Qty Available             4\n",
-       "Weight            0.0421053\n",
-       "Mean             0.00153123\n",
-       "Std               0.0256853\n",
-       "Variance          0.0256853\n",
-       "Name: 4, dtype: object"
+       "Symbol            SBICARD.NS\n",
+       "Qty Available             19\n",
+       "Weight                   0.2\n",
+       "Mean             0.000999157\n",
+       "Std                 0.033308\n",
+       "Variance            0.033308\n",
+       "Name: 20, dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,22 +496,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Symbol             SBIN.NS\n",
-       "Qty Available           11\n",
-       "Weight            0.115789\n",
-       "Mean             -0.002602\n",
-       "Std              0.0317397\n",
-       "Variance         0.0317397\n",
-       "Name: 17, dtype: object"
+       "Symbol              BHEL.NS\n",
+       "Qty Available             8\n",
+       "Weight            0.0842105\n",
+       "Mean            -0.00205979\n",
+       "Std               0.0342878\n",
+       "Variance          0.0342878\n",
+       "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
